# BAScloudAPI

./: .dockerignore  .gitignore  APIContext_8h_source.html  CMakeLists.txt  Connector_8h_source.html  Device_8h_source.html  EntityCollection_8h_source.html  EntityContext_8h_source.html  EntityDateMixin_8h_source.html  EntityTenantMixin_8h_source.html  Entity_8h_source.html  Exceptions_8h_source.html  Paging_8h_source.html  Property_8h_source.html  README.md  Reading_8h_source.html  SetPoint_8h_source.html  Tenant_8h_source.html  User_8h_source.html  Util_8h_source.html  annotated.html  annotated_dup.js  classBASCloud_1_1APIContext.html  classBASCloud_1_1APIContext.js  classBASCloud_1_1BadRequest.html  classBASCloud_1_1BadRequest.js  classBASCloud_1_1BadRequest__coll__graph.dot  classBASCloud_1_1BadRequest__inherit__graph.dot  classBASCloud_1_1ConflictRequest.html  classBASCloud_1_1ConflictRequest.js  classBASCloud_1_1ConflictRequest__inherit__graph.dot  classBASCloud_1_1ConnectionError.html  classBASCloud_1_1ConnectionError.js  classBASCloud_1_1ConnectionError__coll__graph.dot  classBASCloud_1_1Connector.html  classBASCloud_1_1Connector.js  classBASCloud_1_1Connector__coll__graph.dot  classBASCloud_1_1Connector__inherit__graph.dot  classBASCloud_1_1Device.html  classBASCloud_1_1Device.js  (+135 more)
BASCloudAPI/: CMakeLists.txt
BAScloudAPI/: CMakeLists.txt
docker/: Dockerfile  docker-compose.yml
docs/: Doxyfile.in  mainpage.dox
examples/: CMakeLists.txt  collect_devices.cpp  collect_readings.cpp  collect_setpoints.cpp  create_device.cpp  create_reading.cpp  create_setpoint.cpp  login.cpp  main.cpp
python/: .buildinfo  search.html  searchindex.js
pythondocs/: genindex.html  index.html  objects.inv  py-modindex.html  pyBAScloudAPI.html
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+10 more)
test/: CMakeLists.txt  auth_tests.cpp  connector_tests.cpp  device_tests.cpp  property_tests.cpp  reading_tests.cpp  setpoint_tests.cpp  tenant_tests.cpp  user_tests.cpp  util_tests.cpp
(+92 files in other folders)
